refactoring: GoogleAdsRepoGateway implementation